[package]
name = "wot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
aws-config = "0.56.1"
aws-sdk-secretsmanager = "0.30.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.17"